# JavGar_master

./: .gitignore  .gitmodules  README.md
dts/bindings/: pone,ssd1681.yaml
hid/: prj.conf
hid/src/: main.c
offpad/: CMakeLists.txt  Kconfig  Kconfig.offpad  board.cmake  board.yml  offpad.dts  offpad.yaml  offpad_MP2_V1.overlay  offpad_MP2_V1_defconfig  offpad_defconfig  pone-fido.cap  revision.cmake  usb.c
presign/src/: main.c
presign_nucleo_dkg_ElGamal/: CMakeLists.txt  prj.conf
presign_nucleo_dkg_ElGamal/src/: main.c
presign_nucleo_dkg_ElGamal_blame/: prj.conf
presign_nucleo_dkg_ElGamal_blame/src/: main.c
presign_offpad_dkg_ElGamal/: CMakeLists.txt
presign_offpad_dkg_ElGamal/src/: main.c
presign_offpad_dkg_ElGamal_blame/: prj.conf
presign_offpad_dkg_ElGamal_blame/src/: main.c
presign_pc/src/: main.c  main.exe
presign_pc_dkg_ElGamal/src/: main.c
presign_pc_dkg_ElGamal_blame/src/: main.c
presign_pc_tests/src/: main.c
receive_bluetooth/: CMakeLists.txt  prj.conf
receive_usb/: CMakeLists.txt  prj.conf
receive_usb_nucleo/: CMakeLists.txt  prj.conf
receive_usb_offpad/: CMakeLists.txt  prj.conf
signing/: CMakeLists.txt  prj.conf
signing/modules/secp256k1/include/: examples_util.h
signing/modules/secp256k1/src/modules/frost/: fill_random.h  main_impl.h
signing/src/: main.c
signing_nucleo/: prj.conf
signing_nucleo_tests/: CMakeLists.txt
signing_nucleo_tests/src/: main.c
signing_offpad/: CMakeLists.txt  prj.conf
signing_pc_broadcast/: main.c
signing_tests/: CMakeLists.txt
west-manifest/: west.yml
(+22 files in other folders)
